--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap');
 *{
     padding: 0;
     margin: 0;
 }
+
 .body{
-    background: url("../bg.jpg");
+    background-color:darkslateblue;
     min-height: 100vh;
     background-size: 100vw 100vh;
     background-repeat: no-repeat;
@@ -11,21 +13,50 @@
     justify-content: center;
     align-items: center;
 }
+
+#scoreBox{
+    position: absolute;
+    top: 9px;
+    right: 200px;
+    font-size: 39px;
+    font-weight: bold;
+    font-family: 'New Tegomin', serif;
+}
+
+#hiscoreBox{
+    position: absolute;
+    top: 59px;
+    right: 140px;
+    font-size: 39px;
+    font-weight: bold;
+    font-family: 'New Tegomin', serif;
+}
+
 #board{
-    background: #556B2F;
+    background: linear-gradient(rgb(138, 252, 138), rgb(184, 184, 87));
     width: 90vmin;
     height: 92vmin;
     border: 2px solid black;
     display: grid;
-    grid-template-rows: repeat(18,1fr);
-    grid-template-columns: repeat(18,1fr);;
+    grid-template-rows: repeat(18, 1fr);
+    grid-template-columns: repeat(18, 1fr);
 }
+
 .head{
-    background-color: red;
+    background: black;
+    border: 2px solid rgb(34, 4, 34); 
+    transform: scale(1.02);
+    border-radius: 9px;
 }
+
 .snake{
-    background-color: purple;
+    background-color:gray;
+    border: .25vmin solid white;
+    border-radius: 12px;
 }
+
 .food{
-    background-color: yellow;
+    background: red;
+    border: .25vmin solid black;
+    border-radius: 8px;
 }
